style: Fix warning